@@ -2826,59 +2826,13 @@ DECL|field|r
 specifier|private
 specifier|static
 specifier|final
-name|ThreadLocal
-argument_list|<
 name|Random
-argument_list|>
 name|r
 init|=
 operator|new
-name|ThreadLocal
-argument_list|<
 name|Random
-argument_list|>
 argument_list|()
 decl_stmt|;
-comment|/**    * Getter for thread-local Random, which provides better performance than    * a shared Random (even though Random is thread-safe).    *    * @return Thread-local Random.    */
-DECL|method|getRandom ()
-specifier|protected
-name|Random
-name|getRandom
-parameter_list|()
-block|{
-name|Random
-name|rand
-init|=
-name|r
-operator|.
-name|get
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|rand
-operator|==
-literal|null
-condition|)
-block|{
-name|rand
-operator|=
-operator|new
-name|Random
-argument_list|()
-expr_stmt|;
-name|r
-operator|.
-name|set
-argument_list|(
-name|rand
-argument_list|)
-expr_stmt|;
-block|}
-return|return
-name|rand
-return|;
-block|}
 annotation|@
 name|VisibleForTesting
 DECL|method|setRandomSeed (long seed)
@@ -2889,13 +2843,7 @@ name|long
 name|seed
 parameter_list|)
 block|{
-name|Random
-name|rand
-init|=
-name|getRandom
-argument_list|()
-decl_stmt|;
-name|rand
+name|r
 operator|.
 name|setSeed
 argument_list|(
@@ -3149,8 +3097,7 @@ block|}
 name|int
 name|leaveIndex
 init|=
-name|getRandom
-argument_list|()
+name|r
 operator|.
 name|nextInt
 argument_list|(
@@ -3893,12 +3840,6 @@ name|node
 argument_list|)
 expr_stmt|;
 block|}
-name|Random
-name|rand
-init|=
-name|getRandom
-argument_list|()
-decl_stmt|;
 name|int
 name|idx
 init|=
@@ -3931,7 +3872,7 @@ name|shuffle
 argument_list|(
 name|list
 argument_list|,
-name|rand
+name|r
 argument_list|)
 expr_stmt|;
 for|for
